5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1756_1580.log
== TEST (2019-05-28 14:55:27) 
-- CODE:
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		aprovados = aprovados + 1
	if(notas[i] < 6):
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:55:56) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		aprovados = aprovados + 1
	if(notas[i] < 6):
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:58:02) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
notas[i] == nomes[i]
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		aprovados = aprovados + 1
	if(notas[i] < 6):
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:03:06) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
notas[i] = nomes[i]
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		aprovados = aprovados + 1
	if(notas[i] < 6):
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:04:12) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
notas[i] = nomes[i]
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		aprovados = aprovados + 1
	if(notas[i] < 6):
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:33:25) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
notas[i] = nomes[i]
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		i = i + 1
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		i = i + 1
		aprovados = aprovados + 1
	if(notas[i] < 6):
		i = i + 1
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		i = i + 1
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- EXECUTION TIME:
0.407254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 5, in <module>
    notas[i] = nomes[i]
ValueError: invalid literal for int() with base 10: 'A'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:33:46) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(notas == nomes):
	if(notas[i] == -1):
		i = i + 1
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		i = i + 1
		aprovados = aprovados + 1
	if(notas[i] < 6):
		i = i + 1
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		i = i + 1
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:35:40) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(i<notas[i]):
	if(notas[i] == -1):
		i = i + 1
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		i = i + 1
		aprovados = aprovados + 1
	if(notas[i] < 6):
		i = i + 1
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		i = i + 1
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:35:43) 
-- CODE:
from numpy import*
notas = array(eval(input("notas dos alunos: ")))
nomes = array(eval(input("nomes dos alunos: ")))
i = 0
faltaram = 0
aprovados = 0
reprovados = 0
media = 0
while(i<notas[i]):
	if(notas[i] == -1):
		i = i + 1
		faltaram = faltaram + 1
	if(notas[i] >= 6):
		i = i + 1
		aprovados = aprovados + 1
	if(notas[i] < 6):
		i = i + 1
		reprovados = reprovados + 1
	if(notas[i] >= 0):
		i = i + 1
		media = media + sum(notas)/size(notas)
print(faltaram)
print(aprovados)
print(reprovados)
print(round(media, 2))
print(max(nomes[i]))

-- EXECUTION TIME:
0.399226
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
2
1
10.5
G
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
0
0
0
L
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
2
2
25.57
S
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
